common/src/main/bash/k8s/poc1.yaml
# Copyright 2017 Istio Authors
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.
##################################################################################################
# helloworld service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  labels:
    app: helloworld
spec:
  ports:
  - port: 8081
    name: http
  selector:
    app: helloworld
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: helloworld-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: helloworld
        version: v1
    spec:
      containers:
      - name: helloworld
        image: docker.io/asokjp/hello-world-v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
---
##################################################################################################
# claimant service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: claimantservice
  labels:
    app: claimantservice
spec:
  ports:
  - port: 8082
    name: http
  selector:
    app: claimantservice
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: claimantservice-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: claimantservice
        version: v1
    spec:
      containers:
      - name: claimantservice
        image: docker.io/asokjp/claimant-service-v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8082 
---
###########################################################################
# Ingress resource (gateway)
##########################################################################
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /helloWorld/*
        backend:
          serviceName: helloworld
          servicePort: 8081
      - path: /helloWorld/.*
        backend:
          serviceName: helloworld
          servicePort: 8081
      - path: /message1
        backend:
          serviceName: helloworld
          servicePort: 8081
      - path: /claimant
        backend:
          serviceName: claimantservice
          servicePort: 8082
      - path: /message
        backend:
          serviceName: claimantservice
          servicePort: 8082    
---
